--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>Semantic-imdb</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<header>
+    <h1>RRR</h1>
+</header>
+<nav id="nav-actor"><a href="#actor">Actors</a></nav>
+<nav id="nav-quote"><a href="#quote">Quotes</a></nav><br><br>
 
-</body>
-
-</html>
+<summary>MOVIE SUMMARY</summary>
+<p>A fearless revolutionary and an officer in the British force, who once shared a deep bond, 
+    decide to join forces and chart out an inspirational path of freedom against the despotic rulers.</p>
+    <section id="actor">
+<h2>Actors:</h2>
+<ol>
+<li>N. T. Rama Rao Jr.</li><li> Ram Charan</li><li>Ajay Devgn</li><li> Alia Bhatt</li><li> Shriya Saran</li><li> Samuthirakani </li><li>Ray Stevenson</li> <li>Alison Doody</li><li>Olivia Morris</li>
+</ol>
+    </section>
+    <section id="quote">
+        <h2>Quotes:</h2>
+     <ul>
+<li>Apni jung dhundte hue, hathiyar khud ba khud aayenge.</li>
+<li>In tuchche rakshasho ko chhod, Mahishasur ka sanghhaar karna hai…</li>
+<li>Chup chup ke darr darr ke nahi, saamne se war karna hoga.</li>
+<li>Jaan se bhi pyari tumhari dosti hogi, khushi khushi qurbaan ho jaunga.</li>
+     </ul>   
+    </section>
+    <aside>IMDB RATING: 8/10  RELEASE DATE: 24 MARCH 2022</aside><br>
+    <footer>Produced by: D.V.V DANNAYA </footer>
+    </body>
+    </html>
