updated main.html styles.css
updated soln

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <title>Semantic-imdb</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
 <nav id="nav-actor"><a href="#actor">Actors</a></nav>
 <nav id="nav-quote"><a href="#quote">Quotes</a></nav><br><br>
 
-<summary>MOVIE SUMMARY</summary>
-<p>A fearless revolutionary and an officer in the British force, who once shared a deep bond, 
-    decide to join forces and chart out an inspirational path of freedom against the despotic rulers.</p>
+<summary>MOVIE SUMMARY : 
+A fearless revolutionary and an officer in the British force, who once shared a deep bond, 
+    decide to join forces and chart out an inspirational path of freedom against the despotic rulers.</summary>
     <section id="actor">
 <h2>Actors:</h2>
 <ol>
@@ -30,7 +31,8 @@
 <li>Jaan se bhi pyari tumhari dosti hogi, khushi khushi qurbaan ho jaunga.</li>
      </ul>   
     </section>
-    <aside>IMDB RATING: 8/10  RELEASE DATE: 24 MARCH 2022</aside><br>
-    <footer>Produced by: D.V.V DANNAYA </footer>
+    <aside>IMDB RATING: 8/10<span> RELEASE DATE: 24 MARCH 2022</span></aside>
+    </aside><br>
+    <footer>Produced by:   &lt  D.V.V DANNAYA  &gt </footer>
     </body>
     </html>
